Tests/CompilerTests/positive/abstract-given.hylo
//! no-std

fun check<T>(x: T) {}

trait P {
  type X
  fun f(x: X) { check<Self.X>(x) }
}
